--- a/style.css
+++ b/style.css
@@ -85,10 +85,11 @@ h1 {
     border: none;
     margin: 2px;
     border-radius: 2px;
+    font-size: 20px;
 }
 
 
-@media (max-width: 800px) {
+@media only screen and (max-width: 600px) {
     .control {
         visibility: visible;
     }
